--- a/src/app/pages/chat-boot/chat-boot.component.css
+++ b/src/app/pages/chat-boot/chat-boot.component.css
@@ -1,8 +1,9 @@
 .chat-container {
   max-width: 600px;
+  height: 400px;
   margin: 0 auto;
   border: 1px solid #ccc;
-  border-radius: 5px;
+  border-radius: 2px;
   padding: 10px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
@@ -10,7 +11,7 @@
 .messages {
   max-height: 400px;
   overflow-y: auto;
-  margin-bottom: 10px;
+  margin-bottom: 50px;
 }
 
 .user-message {
@@ -32,7 +33,11 @@
 }
 
 .input-container {
-  display: flex;
+  margin: 0 auto;
+  border: 1px solid #ccc;
+  border-radius: 2px;
+  padding: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 input {
