recepcion de cambios

--- a/src/app/pages/chat-boot/chat-boot.component.html
+++ b/src/app/pages/chat-boot/chat-boot.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-  <span>Chatbot de la Tienda</span>
+  <span>Chatbot</span>
 </mat-toolbar>
 
 <div class="chat-container">
