--- a/src/app/pages/chat-boot/chat-boot.component.css
+++ b/src/app/pages/chat-boot/chat-boot.component.css
@@ -14,7 +14,8 @@ mat-toolbar {
 /* Chat Container */
 .chat-container {
   padding: 10px;
-  max-width: 400px;
+  
+  max-width: 600px;
   margin: 0 auto;
   border: 1px solid #444;
   border-radius: 10px;
@@ -24,12 +25,12 @@ mat-toolbar {
 /* Chat Box */
 .chat-box {
   max-height: 500px;
- 
+  min-height: 500px;
   overflow-y: auto;
   margin-bottom: 10px;
   padding: 10px;
   border-radius: 10px;
-  background-color: #2a2a2a;
+  background-color: #cccaca;
 }
 
 /* User and Bot Messages */
