--- a/src/app/pages/chat-boot/chat-boot.component.css
+++ b/src/app/pages/chat-boot/chat-boot.component.css
@@ -46,7 +46,7 @@ mat-toolbar {
 .bot-message {
   text-align: left;
   margin: 10px;
-  background-color: #616161;
+  background-color: #4488e0;
   color: #fff;
   padding: 10px;
   border-radius: 10px;
